# cash-register

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
project/project/: settings.py  urls.py
project/store/: models.py  serializers.py  urls.py  views.py
project/store/migrations/: 0001_initial.py
project/store/services/: base.py  html_service.py  pdf_service.py  qr_service.py  receipt_service.py
project/store/templates/: receipt.html
project/store/tests/: __init__.py  test_models.py  test_views.py
